admission/ValidatingAdmissionPolicy/policies/run-as-nonroot/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as-nonroot-pod
  annotations:
    kubeapt.io/uuid: "3e12a1ed-4cb4-4d04-9fc4-75c9ca5af6cc"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  securityContext:
    runAsNonRoot: false
